--- a/donatepage/donate.css
+++ b/donatepage/donate.css
@@ -12,29 +12,14 @@ html {
     font-family: raleway;
 }
 
-header {
-    background-color: white;
-    box-shadow: 0 2px 5px black;
-    padding: 1rem 0;
-}
 
-.ul-navbar {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    align-items: center;
-    height: 6rem;
-    gap: 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 2rem;
-}
 
 .li-navbar {
     list-style: none;
     border: 2px black solid;
-    height: 4rem;
-    width: 12rem;
+    height: 15px;
+    margin: 4.3px;
+    width: 84.4766px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,7 +27,6 @@ header {
     border-radius: 10px;
     transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
-
 .li-navbar:hover {
     background-color: black;
     color: white;
@@ -52,7 +36,7 @@ header {
 a {
     text-decoration: none;
     text-align: center;
-    font-size: 1.4rem;
+    font-size: 9.856px;
     color: black;
     transition: color 0s ease-in-out;
 }
@@ -95,7 +79,12 @@ footer {
     color: red;
 }
 
-
+header {
+    background-color: white;
+    box-shadow: 0 2px 5px black;
+    padding: 7.04px 0;
+    height: 161.92px;
+}
 
 
 button:hover {
@@ -166,7 +155,6 @@ ul {
 }
 
 
-
 .donate--button {
     border-radius: 5rem;
     /* height: 3rem; */
@@ -202,6 +190,40 @@ ul {
         box-shadow: 20px 8px 20px 10px;
     }
 
+    .ul-navbar {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    height: 60px;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+    .li-navbar {
+    list-style: none;
+    border: 2px black solid;
+    height: 40px;
+    width: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
+    transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
+    margin: 5px;
+}
+
+    a {
+    text-decoration: none;
+    text-align: center;
+    font-size: 12px;
+    color: black;
+    transition: color 0s ease-in-out;
+}
+
     .img--donate-below {
         grid-area: imgtwo;
         object-fit: contain;
@@ -236,6 +258,13 @@ ul {
         margin: 4rem 0;
         align-self: center;
     }
+    
+    header {
+    background-color: white;
+    box-shadow: 0 2px 5px black;
+    padding: 10px 0;
+    height: 161.92px;
+}
 
     .donate--cta {
         text-align: center;
